--- a/frontend/src/resources/css/output.css
+++ b/frontend/src/resources/css/output.css
@@ -558,8 +558,32 @@ video {
   position: fixed;
 }
 
+.absolute {
+  position: absolute;
+}
+
+.relative {
+  position: relative;
+}
+
 .bottom-0 {
   bottom: 0px;
+}
+
+.right-4 {
+  right: 1rem;
+}
+
+.top-0 {
+  top: 0px;
+}
+
+.top-3 {
+  top: 0.75rem;
+}
+
+.z-10 {
+  z-index: 10;
 }
 
 .m-2 {
@@ -572,6 +596,10 @@ video {
 
 .mb-4 {
   margin-bottom: 1rem;
+}
+
+.mt-14 {
+  margin-top: 3.5rem;
 }
 
 .mt-2 {
@@ -590,6 +618,10 @@ video {
   display: flex;
 }
 
+.grid {
+  display: grid;
+}
+
 .hidden {
   display: none;
 }
@@ -602,12 +634,12 @@ video {
   height: 2.5rem;
 }
 
-.h-11 {
-  height: 2.75rem;
+.h-12 {
+  height: 3rem;
 }
 
-.h-4\/5 {
-  height: 80%;
+.h-3\/4 {
+  height: 75%;
 }
 
 .h-5 {
@@ -622,16 +654,44 @@ video {
   height: 2.25rem;
 }
 
+.h-\[2px\] {
+  height: 2px;
+}
+
 .h-\[80\%\] {
   height: 80%;
+}
+
+.h-full {
+  height: 100%;
 }
 
 .h-screen {
   height: 100vh;
 }
 
+.min-h-screen {
+  min-height: 100vh;
+}
+
+.w-4\/5 {
+  width: 80%;
+}
+
 .w-5 {
   width: 1.25rem;
+}
+
+.w-8 {
+  width: 2rem;
+}
+
+.w-9\/12 {
+  width: 75%;
+}
+
+.w-\[80\%\] {
+  width: 80%;
 }
 
 .w-\[95\%\] {
@@ -646,8 +706,28 @@ video {
   width: 100vw;
 }
 
-.flex-grow {
-  flex-grow: 1;
+.flex-1 {
+  flex: 1 1 0%;
+}
+
+@keyframes pulse {
+  50% {
+    opacity: .5;
+  }
+}
+
+.animate-pulse {
+  animation: pulse 2s cubic-bezier(0.4, 0, 0.6, 1) infinite;
+}
+
+@keyframes spin {
+  to {
+    transform: rotate(360deg);
+  }
+}
+
+.animate-spin {
+  animation: spin 1s linear infinite;
 }
 
 .appearance-none {
@@ -656,8 +736,16 @@ video {
           appearance: none;
 }
 
+.grid-cols-\[1fr_15\%\] {
+  grid-template-columns: 1fr 15%;
+}
+
 .flex-col {
   flex-direction: column;
+}
+
+.items-start {
+  align-items: flex-start;
 }
 
 .items-center {
@@ -670,6 +758,10 @@ video {
 
 .justify-between {
   justify-content: space-between;
+}
+
+.justify-around {
+  justify-content: space-around;
 }
 
 .gap-2 {
@@ -688,6 +780,10 @@ video {
   border-radius: 1rem;
 }
 
+.rounded-full {
+  border-radius: 9999px;
+}
+
 .rounded-md {
   border-radius: 0.375rem;
 }
@@ -700,6 +796,15 @@ video {
   border-width: 1px;
 }
 
+.border-4 {
+  border-width: 4px;
+}
+
+.border-\[\#2C2C2C\] {
+  --tw-border-opacity: 1;
+  border-color: rgb(44 44 44 / var(--tw-border-opacity, 1));
+}
+
 .border-black {
   --tw-border-opacity: 1;
   border-color: rgb(0 0 0 / var(--tw-border-opacity, 1));
@@ -708,6 +813,16 @@ video {
 .border-white {
   --tw-border-opacity: 1;
   border-color: rgb(255 255 255 / var(--tw-border-opacity, 1));
+}
+
+.border-t-\[\#3B8AD9\] {
+  --tw-border-opacity: 1;
+  border-top-color: rgb(59 138 217 / var(--tw-border-opacity, 1));
+}
+
+.border-t-\[\#FFD27F\] {
+  --tw-border-opacity: 1;
+  border-top-color: rgb(255 210 127 / var(--tw-border-opacity, 1));
 }
 
 .bg-\[\#1E1E1E\] {
@@ -725,6 +840,11 @@ video {
   background-color: rgb(59 138 217 / var(--tw-bg-opacity, 1));
 }
 
+.bg-\[\#5FA8F5\] {
+  --tw-bg-opacity: 1;
+  background-color: rgb(95 168 245 / var(--tw-bg-opacity, 1));
+}
+
 .bg-\[\#F0F0F0\] {
   --tw-bg-opacity: 1;
   background-color: rgb(240 240 240 / var(--tw-bg-opacity, 1));
@@ -733,6 +853,11 @@ video {
 .bg-\[\#FF9E4D\] {
   --tw-bg-opacity: 1;
   background-color: rgb(255 158 77 / var(--tw-bg-opacity, 1));
+}
+
+.bg-\[\#FFD27F\] {
+  --tw-bg-opacity: 1;
+  background-color: rgb(255 210 127 / var(--tw-bg-opacity, 1));
 }
 
 .bg-dark {
@@ -828,6 +953,16 @@ video {
   font-family: Poppins, sans-serif;
 }
 
+.text-2xl {
+  font-size: 1.5rem;
+  line-height: 2rem;
+}
+
+.text-4xl {
+  font-size: 2.25rem;
+  line-height: 2.5rem;
+}
+
 .text-lg {
   font-size: 1.125rem;
   line-height: 1.75rem;
@@ -845,6 +980,10 @@ video {
 
 .font-bold {
   font-weight: 700;
+}
+
+.uppercase {
+  text-transform: uppercase;
 }
 
 .italic {
@@ -903,6 +1042,10 @@ video {
 }
 
 @media (min-width: 768px) {
+  .md\:left-0 {
+    left: 0px;
+  }
+
   .md\:ml-2 {
     margin-left: 0.5rem;
   }
@@ -911,12 +1054,12 @@ video {
     display: block;
   }
 
-  .md\:h-10 {
-    height: 2.5rem;
+  .md\:flex {
+    display: flex;
   }
 
-  .md\:h-14 {
-    height: 3.5rem;
+  .md\:h-10 {
+    height: 2.5rem;
   }
 
   .md\:h-2\/3 {
@@ -931,12 +1074,16 @@ video {
     height: 75%;
   }
 
-  .md\:h-full {
-    height: 100%;
+  .md\:h-\[77\%\] {
+    height: 77%;
   }
 
-  .md\:h-screen {
-    height: 100vh;
+  .md\:h-\[calc\(100vh-24px\)\] {
+    height: calc(100vh - 24px);
+  }
+
+  .md\:h-full {
+    height: 100%;
   }
 
   .md\:w-1\/2 {
@@ -951,8 +1098,16 @@ video {
     width: 75%;
   }
 
-  .md\:w-\[18\%\] {
-    width: 18%;
+  .md\:w-\[20\%\] {
+    width: 20%;
+  }
+
+  .md\:w-\[2px\] {
+    width: 2px;
+  }
+
+  .md\:w-\[97\%\] {
+    width: 97%;
   }
 
   .md\:flex-row {
@@ -971,8 +1126,12 @@ video {
     justify-content: flex-start;
   }
 
-  .md\:justify-between {
-    justify-content: space-between;
+  .md\:justify-center {
+    justify-content: center;
+  }
+
+  .md\:justify-around {
+    justify-content: space-around;
   }
 
   .md\:px-4 {
